<resources>
    <string name="app_name">Dbaj o Zdrowie</string>
    <string name="add_med_title">Dodaj lek</string>
    <string name="med_name_text">Nazwa leku</string>
    <string name="med_name_edit_hint">Nazwa leku na opakowaniu</string>
    <string name="count_text">Rozmiar opakowania</string>
    <string name="count_edit_hint">Ilość leku</string>
    <string name="exp_date">Data ważnośći</string>
    <string name="exp_edit_hint">Wybierz datę</string>
    <string name="med_img">Kliknij aby dodać zdjęcie</string>
    <string name="add_image_button">Dodaj zdjęcie</string>
    <string name="add_med_button">Dodaj lek</string>
    <string name="calendar_button">Dodaj datę</string>
    <string-array name="units">
        <item>szt.</item>
        <item>ml</item>
        <item>l</item>
    </string-array>
    <string name="unit_button">Jednostka</string>
    <string name="unit_button_hint">Kliknij aby wybrać</string>
    <string name="schedule_button">Harmonogram</string>
    <string-array name="schedule_options">
        <item>Codziennie</item>
        <item>Co dwa dni</item>
        <item>Co tydzień</item>
    </string-array>
    <string name="sch_name_hint">Nazwa przypomnienia</string>
    <string name="iteration_button_hint">Powtórzenia powiadomienia</string>
    <string name="set_reminder_button">Ustaw powiadomienie</string>
    <string name="list_button">Lista leków</string>
</resources>