<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedicine"
    android:background="@drawable/main_background"
    >

    <TextView
        android:id="@+id/add_med_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_med_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/med_name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/med_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_med_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_med_title"
        app:layout_constraintBottom_toTopOf="@id/med_name_edit"
    />

    <EditText
        android:id="@+id/med_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/med_name_edit_hint"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/med_name_text"
        app:layout_constraintBottom_toTopOf="@id/count_text"
    />

    <TextView
        android:id="@+id/count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/med_name_edit"
        app:layout_constraintBottom_toTopOf="@id/count_edit"
    />

    <EditText
        android:id="@+id/count_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/count_edit_hint"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_text"
        app:layout_constraintBottom_toTopOf="@id/exp_date"
    />

    <TextView
        android:id="@+id/exp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exp_date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_edit"
        app:layout_constraintBottom_toTopOf="@id/exp_edit"
    />

    <EditText
        android:id="@+id/exp_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exp_edit_hint"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exp_date"
        app:layout_constraintBottom_toTopOf="@id/med_img_text"
    />

    <TextView
        android:id="@+id/med_img_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_img"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exp_edit"
        app:layout_constraintBottom_toTopOf="@id/med_img"
    />

    <ImageView
        android:id="@+id/med_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/add_image_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/med_img_text"/>

    <Button
        android:id="@+id/add_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/med_img"
        app:layout_constraintBottom_toTopOf="@id/add_med"
        android:onClick="takePhoto"
    />

    <Button
        android:id="@+id/add_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_med_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_image_button"
        app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>