<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity"
    android:background="@drawable/main_background"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:cardBackgroundColor="@color/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:cardCornerRadius="0dp"
        android:elevation="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/back_button"
                android:layout_gravity="center_vertical"
                android:onClick="getBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/add_med_title"
                />

            <TextView
                android:id="@+id/add_med_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/jost"
                android:text="@string/schedule_button"
                android:textAlignment="center"
                android:textColor="@color/header_text"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/back_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/sch_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sch_name_hint"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginHorizontal="50dp"
        android:inputType="text"
        android:elevation="5dp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/jost"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/it_button"
        />

    <Button
        android:id="@+id/it_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/iteration_button_hint"
        android:stateListAnimator="@null"
        android:backgroundTint="@color/blue_gary"
        android:textColor="@color/header_text"
        android:textSize="22sp"
        android:fontFamily="@font/jost"
        android:onClick="dialog"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sch_name"
        app:layout_constraintBottom_toTopOf="@id/set_button"
        />

    <Button
        android:id="@+id/set_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/set_reminder_button"
        android:stateListAnimator="@null"
        android:backgroundTint="@color/blue_gary"
        android:textColor="@color/header_text"
        android:textSize="22sp"
        android:fontFamily="@font/jost"
        android:onClick="setReminder"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/it_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>