<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:cardBackgroundColor="@color/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:cardCornerRadius="0dp"
        android:elevation="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_med_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/jost"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/header_text"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--TODO: Change widget id below and think about functionality-->
    <androidx.cardview.widget.CardView
        android:id="@+id/bulbulator"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/add_med_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/light_gray"
        android:elevation="5dp"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bulbulator"
            android:fontFamily="@font/jost"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:background="@color/light_gray"
        />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_med_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_med_title"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        android:fontFamily="@font/jost"
        android:elevation="5dp"
        android:textColor="@color/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bulbulator"
        app:layout_constraintBottom_toTopOf="@id/schedule_button"
    />

    <Button
        android:id="@+id/schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_button"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        android:fontFamily="@font/jost"
        android:elevation="5dp"
        android:textColor="@color/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_med_button"
        app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>